force-app/main/default/objects/CSC_Tracker__c/CSC_Tracker__c.object-meta.xml
<CustomObject>
    <label>CSC Tracker Activity</label>
    <nameField>
        <displayFormat>CSC{000000}</displayFormat>
        <label>Tracker Activity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSC Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>