force-app/main/default/objects/CSC_Tracker__c/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <formula>TEXT(Request_Type__c) + &apos; - &apos; + Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Name</label>
    <type>Text</type>
</CustomField>