force-app/main/default/objects/CSC_Tracker__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachment</label>
    <type>Checkbox</type>
</CustomField>