force-app/main/default/objects/CSC_Tracker__c/fields/Clearance_Complete__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clearance Complete</label>
    <type>Checkbox</type>
</CustomField>