force-app/main/default/objects/CSC_Tracker__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>