force-app/main/default/objects/CSC_Tracker__c/fields/Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Distribution_List__c</fullName>
    <label>Distribution List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full (only select this if sending to all)</fullName>
            </value>
            <value>
                <fullName>DPRP</fullName>
            </value>
            <value>
                <fullName>AMP</fullName>
            </value>
            <value>
                <fullName>DREM</fullName>
            </value>
            <value>
                <fullName>Training Entities</fullName>
            </value>
            <value>
                <fullName>1901 Islands</fullName>
            </value>
            <value>
                <fullName>Tribal</fullName>
            </value>
            <value>
                <fullName>1705</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>