force-app/main/default/objects/CSC_Tracker__c/fields/KA_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>KA_Resource_Type__c</fullName>
    <label>KA Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covering as a Benefit</fullName>
            </value>
            <value>
                <fullName>Delivering the Lifestyle Change Program</fullName>
            </value>
            <value>
                <fullName>Learning About the National DPP</fullName>
            </value>
            <value>
                <fullName>Partnering for Success</fullName>
            </value>
            <value>
                <fullName>Prediabetes Screening Testing &amp; Referral</fullName>
            </value>
            <value>
                <fullName>Promotion Awareness &amp; Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>