force-app/main/default/objects/CSC_Tracker__c/fields/Non_HHS_Link__c.field-meta.xml
<CustomField>
    <fullName>Non_HHS_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-HHS Link</label>
    <type>Checkbox</type>
</CustomField>