force-app/main/default/objects/CSC_Tracker__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Platfom for hosting a webinar</description>
    <label>Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>