force-app/main/default/objects/CSC_Tracker__c/fields/Recording_POC__c.field-meta.xml
<CustomField>
    <fullName>Recording_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recording POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CSC Tracker</relationshipLabel>
    <relationshipName>CSC_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>