force-app/main/default/objects/CSC_Tracker__c/fields/Relevant_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Status_Notes__c</fullName>
    <description>Used to add notes about the status to better track progress of items.</description>
    <label>Relevant Status Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>