force-app/main/default/objects/CSC_Tracker__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New KA</fullName>
            </value>
            <value>
                <fullName>Update KA</fullName>
            </value>
            <value>
                <fullName>Retire KA</fullName>
            </value>
            <value>
                <fullName>New Webinar</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Event/Meeting</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Report/Dashboard</fullName>
            </value>
            <value>
                <fullName>Process/Automation</fullName>
            </value>
            <value>
                <fullName>SOP</fullName>
            </value>
            <value>
                <fullName>Homepage Announcement</fullName>
            </value>
            <value>
                <fullName>508 Review/Compliance</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Update/Edit Document</fullName>
            </value>
            <value>
                <fullName>Complete 508 Compliance</fullName>
            </value>
            <value>
                <fullName>Create Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>