force-app/main/default/objects/CSC_Tracker__c/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <label>Topics</label>
    <length>50</length>
    <type>Text</type>
</CustomField>