force-app/main/default/objects/CSC_Tracker__c/fields/Type_of_Webinar_Support__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Webinar_Support__c</fullName>
    <description>Type of CSC support, based on the Webinar Request and Support SOP</description>
    <label>Type of Webinar Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-recorded Support (Posting Completed Video)</fullName>
            </value>
            <value>
                <fullName>Pre-recorded Support (Video Clearance to Posting)</fullName>
            </value>
            <value>
                <fullName>Pre-recorded Support (eClearance to Posting)</fullName>
            </value>
            <value>
                <fullName>Live, Real-Time Support (Co-hosting to Posting)</fullName>
            </value>
            <value>
                <fullName>Standalone Support (Recording to Posting)</fullName>
            </value>
            <value>
                <fullName>Live, Real-Time Support (Full Support)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>