force-app/main/default/objects/CSC_Tracker__c/recordTypes/CSC_Enhancement.recordType-meta.xml
<RecordType>
    <fullName>CSC_Enhancement</fullName>
    <active>true</active>
    <label>CSC Enhancement</label>
</RecordType>