force-app/main/default/objects/CSC_Tracker__c/recordTypes/Dissemination.recordType-meta.xml
<RecordType>
    <fullName>Dissemination</fullName>
    <active>true</active>
    <label>Dissemination</label>
</RecordType>