force-app/main/default/objects/CSC_Tracker__c/recordTypes/Document_Request.recordType-meta.xml
<RecordType>
    <fullName>Document_Request</fullName>
    <active>true</active>
    <label>Document Request</label>
</RecordType>