force-app/main/default/objects/CSC_Tracker__c/recordTypes/Knowledge_Article.recordType-meta.xml
<RecordType>
    <fullName>Knowledge_Article</fullName>
    <active>true</active>
    <label>Knowledge Article</label>
</RecordType>