force-app/main/default/objects/CSC_Tracker__c/listViews/Pending_Tasks.listView-meta.xml
<ListView>
    <fullName>Pending_Tasks</fullName>
    <columns>Activity_Name__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Pending Tasks</label>
</ListView>